@@ -6,15 +6,18 @@
 
 (-) Pulling
     (-) vikings can pull some objects
+        - when pulling viking turns back, he stops pulling, game doesn't crash
         - walking viking, when he can't walk on, start's pulling instead of
           just stopping
+        - Eric can't start pulling when he is sprinting against a BigBrick
     (-) [GO] Pullable block 80*80px
-        (-) doesn't blink awfully when pulled (must be painted after viking's 
-            update)
-	(-) can fall into hole 80*80px
-        (-) as a Sprite: falls down
+        (-) can't be pulled through a solid wall
 
 (-) New VikingState
+    (-) particular states aren't implemented as classes, but as a small bunch 
+        of data;
+        when changing state, prepared singleton is taken, not a newly created 
+        object
     (-) remove modification of VikingState internals from Viking subclasses 
         (e.g. Warior & Sprinter assign VikingState#horizontal_state)
     (-) code saying which state can come after which should be
@@ -23,6 +26,11 @@
         can follow after each other
     (-) test that Baleog can't use his abilities while climbing a Ladder
     (-) fix all sophisticated sprites (Snail, Penguin, Robot)
+
+(-) ZSortedGroup has two responsibilities in Location
+    (1. keep sorted set of objects for painting and 2. keep track of
+     "multiple-present objects": objects which are e.g. Sprite and StaticObject
+     at the same time) - either rename the class or split it into two
 
 (-) Web:
     (-) Fix links width ("Documentation" shouldn't exceed the frame)
